--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
 Django==1.6.5
+MySQL-python==1.2.5
+django-crispy-forms==1.4.0
+django-tables2==0.15.0
 djangorestframework==2.4.3
+six==1.8.0
 wsgiref==0.1.2
