--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
 Django==1.6.5
+Jinja2==2.7.3
+MarkupSafe==0.23
 MySQL-python==1.2.5
+Pygments==1.6
+Sphinx==1.2.3
 django-crispy-forms==1.4.0
 django-tables2==0.15.0
 djangorestframework==2.4.3
+docutils==0.12
 six==1.8.0
 wsgiref==0.1.2
