--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ MySQL-python==1.2.5
 Pygments==1.6
 Sphinx==1.2.3
 django-crispy-forms==1.4.0
+django-registration==1.0
 django-tables2==0.15.0
 djangorestframework==2.4.3
 docutils==0.12
