--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,17 @@ Django==1.6.5
 Jinja2==2.7.3
 MarkupSafe==0.23
 MySQL-python==1.2.5
+Pillow==2.6.1
 Pygments==1.6
 Sphinx==1.2.3
 django-crispy-forms==1.4.0
-django-registration==1.0
-django-tables2==0.15.0
+django-guardian==1.2.4
+django-userena==1.3.0
 djangorestframework==2.4.3
 docutils==0.12
+easy-thumbnails==2.2
+html2text==2014.9.25
+psycopg2==2.5.4
+python-gnupg==0.3.6
 six==1.8.0
 wsgiref==0.1.2
